# encryption_chat_app

./: .gitignore  README.md  client.py  keygen.py  mitm.py  pyproject.toml  requirements.txt  server.py
chat/: chat_utils.py
encryption/: encryption_utils.py
